Quantity work started

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,38 @@
-<<<<<<< HEAD
+appdirs==1.4.4
 asgiref==3.3.4
+cairocffi==1.2.0
+CairoSVG==2.5.2
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 cryptography==3.4.7
+cssselect2==0.4.1
 defusedxml==0.7.1
-Django==3.2
+distlib==0.3.2
+Django==3.2.5
 django-allauth==0.44.0
+django-crispy-forms==1.12.0
+filelock==3.0.12
+html5lib==1.1
 idna==2.10
 oauthlib==3.1.0
+packaging==20.9
 Pillow==8.2.0
+pipenv==2021.5.29
+psycopg2-binary==2.9.1
 pycparser==2.20
 PyJWT==2.0.1
+pyparsing==2.4.7
+pyphen==0.11.0
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+six==1.16.0
 sqlparse==0.4.1
+tinycss2==1.1.0
 urllib3==1.26.4
-=======
-asgiref==3.3.4
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-cryptography==3.4.7
-defusedxml==0.7.1
-Django==3.2
-django-allauth==0.44.0
-idna==2.10
-oauthlib==3.1.0
-Pillow==8.2.0
-pycparser==2.20
-PyJWT==2.0.1
-python3-openid==3.2.0
-pytz==2021.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-sqlparse==0.4.1
-urllib3==1.26.4
->>>>>>> e03e4549c455b873eb0d105eebfa3412f13fd955
+virtualenv==20.4.7
+virtualenv-clone==0.5.4
+WeasyPrint==52.5
+webencodings==0.5.1
